feat: Improve hero title hierarchy and readability
- Break long headline into cleaner H1/H2 structure
- H1: 'You Need a Fighter, Not a Settlement Lawyer'
- H2: 'Arrested or Facing Criminal Charges in Louisville, Kentucky?'
- Add visual hierarchy with larger main title
- Style H2 with gold accent color for emphasis
- Update responsive breakpoints for new structure
- Improve mobile readability with adjusted font sizes
- Add text shadow for better contrast

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1 class="hero-title">Arrested or Facing Criminal Charges? You Need a Fighter, Not a Settlement Lawyer.</h1>
+                    <h1 class="hero-title">
+                        <span class="hero-title-main">You Need a Fighter,<br>Not a Settlement Lawyer</span>
+                    </h1>
+                    <h2 class="hero-title-sub">Arrested or Facing Criminal Charges in Louisville, Kentucky?</h2>
                     <p class="hero-subtitle">23 years of aggressive criminal defense. When your freedom is on the line, Scott Barton fights to win—from investigation to trial and beyond.</p>
                     
                     <div class="trust-signals">
