chore: Add wrangler.toml for Cloudflare Pages deployment and update nav

--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
                         </div>
                     </div>
                     <a href="#results" class="nav-link">Case Results</a>
-                    <a href="#about" class="nav-link">About</a>
                     <a href="#testimonials" class="nav-link">Testimonials</a>
-                    <a href="#faq" class="nav-link">FAQ</a>
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <div class="dropdown">
+                        <a href="#contact" class="nav-link dropdown-toggle">Contact</a>
+                        <div class="dropdown-content">
+                            <a href="#about">About</a>
+                            <a href="#faq">FAQ</a>
+                        </div>
+                    </div>
                 </div>
                 <div class="nav-cta">
                     <a href="#contact" class="btn btn-primary">Free Consultation</a>
