Update logo and add favicon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@700;900&family=Open+Sans:wght@400;600;700&display=swap"
         rel="stylesheet">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         <div class="container">
             <div class="nav-wrapper">
                 <div class="logo">
-                    <img src="barton-logo.jpg" alt="Barton Law Office" class="logo-img">
+                    <img src="barton-logo.png" alt="Barton Law Office" class="logo-img">
                 </div>
                 <div class="nav-menu" id="navMenu">
                     <a href="#home" class="nav-link">Home</a>
